stable client delivery version