@@ -14,15 +14,22 @@ import java.util.Collections;
 
 import java.io.IOException;
 
+import com.eservice1.user.entity.User;
+import com.eservice1.user.repository.UserRepository;
+
 @Component
 public class JwtFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
 
+    private final UserRepository userRepository;
+
     public JwtFilter(
-            JwtService jwtService) {
+            JwtService jwtService,
+            UserRepository userRepository) {
 
         this.jwtService = jwtService;
+        this.userRepository = userRepository;
     }
 
     @Override
@@ -50,14 +57,20 @@ public class JwtFilter extends OncePerRequestFilter {
                 String phoneNumber =
                         jwtService.extractPhoneNumber(token);
 
+                User user =
+                        userRepository.findByPhoneNumber(
+                                phoneNumber
+                        ).orElseThrow();
 
-                System.out.println(phoneNumber);
+                System.out.println("ROLE = " + user.getRole());
 
                 UsernamePasswordAuthenticationToken auth =
                         new UsernamePasswordAuthenticationToken(
                                 phoneNumber,
                                 null,
-                                Collections.emptyList()
+                                java.util.List.of(
+                                        user.getAuthority()
+                                )
                         );
 
                 SecurityContextHolder
